examples/errors/range-out-of-bounds.spcasm
org 0
incbin "../binary.bin":20000-50000